Przechodzi wszystkie testy